--- a/notebooks/stack_uber_fare.ipynb
+++ b/notebooks/stack_uber_fare.ipynb
@@ -71,7 +71,7 @@
           "height": 400
         },
         "id": "1N4jUZ-jHgc0",
-        "outputId": "118f0914-2cd6-41d9-882f-c4698b10da5a"
+        "outputId": "0f93dc56-8af5-4b8d-9e51-99d9dcc924d4"
       },
       "execution_count": 2,
       "outputs": [
@@ -82,7 +82,7 @@
             "Downloading...\n",
             "From: https://drive.google.com/uc?id=1nvFRd8uiUV8OfoihMOXZ0Emle1ksxwW1\n",
             "To: /content/uber.csv\n",
-            "100%|██████████| 23.5M/23.5M [00:00<00:00, 53.0MB/s]\n"
+            "100%|██████████| 23.5M/23.5M [00:00<00:00, 76.0MB/s]\n"
           ]
         },
         {
@@ -112,7 +112,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-db588cb1-0ee2-4359-b9dc-fa4460fb04ab\" class=\"colab-df-container\">\n",
+              "  <div id=\"df-99e8c43b-b81b-4675-9db2-14c21b984bb9\" class=\"colab-df-container\">\n",
               "    <div>\n",
               "<style scoped>\n",
               "    .dataframe tbody tr th:only-of-type {\n",
@@ -209,7 +209,7 @@
               "    <div class=\"colab-df-buttons\">\n",
               "\n",
               "  <div class=\"colab-df-container\">\n",
-              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-db588cb1-0ee2-4359-b9dc-fa4460fb04ab')\"\n",
+              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-99e8c43b-b81b-4675-9db2-14c21b984bb9')\"\n",
               "            title=\"Convert this dataframe to an interactive table.\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -261,12 +261,12 @@
               "\n",
               "    <script>\n",
               "      const buttonEl =\n",
-              "        document.querySelector('#df-db588cb1-0ee2-4359-b9dc-fa4460fb04ab button.colab-df-convert');\n",
+              "        document.querySelector('#df-99e8c43b-b81b-4675-9db2-14c21b984bb9 button.colab-df-convert');\n",
               "      buttonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "      async function convertToInteractive(key) {\n",
-              "        const element = document.querySelector('#df-db588cb1-0ee2-4359-b9dc-fa4460fb04ab');\n",
+              "        const element = document.querySelector('#df-99e8c43b-b81b-4675-9db2-14c21b984bb9');\n",
               "        const dataTable =\n",
               "          await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                    [key], {});\n",
@@ -286,8 +286,8 @@
               "  </div>\n",
               "\n",
               "\n",
-              "    <div id=\"df-056870a0-fd9f-4b73-a839-07374875ad9e\">\n",
-              "      <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-056870a0-fd9f-4b73-a839-07374875ad9e')\"\n",
+              "    <div id=\"df-52126617-fb60-47a9-8f7d-b3449dbcc120\">\n",
+              "      <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-52126617-fb60-47a9-8f7d-b3449dbcc120')\"\n",
               "                title=\"Suggest charts\"\n",
               "                style=\"display:none;\">\n",
               "\n",
@@ -406,7 +406,7 @@
               "        }\n",
               "        (() => {\n",
               "          let quickchartButtonEl =\n",
-              "            document.querySelector('#df-056870a0-fd9f-4b73-a839-07374875ad9e button');\n",
+              "            document.querySelector('#df-52126617-fb60-47a9-8f7d-b3449dbcc120 button');\n",
               "          quickchartButtonEl.style.display =\n",
               "            google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "        })();\n",
@@ -710,6 +710,60 @@
     {
       "cell_type": "code",
       "source": [
+        "class DropLowSHAPFeatures(BaseEstimator, TransformerMixin):\n",
+        "    def __init__(self):\n",
+        "        self.features_to_drop = [\n",
+        "            \"cat_clean__dropoff_cluster_4\",\n",
+        "            \"cat_clean__pickup_cluster_5\",\n",
+        "            \"cat_clean__pickup_cluster_17\",\n",
+        "            \"cat_clean__dropoff_cluster_13\",\n",
+        "            \"cat_clean__dropoff_cluster_5\",\n",
+        "            \"cat_clean__dropoff_cluster_11\",\n",
+        "            \"cat_clean__pickup_cluster_7\",\n",
+        "            \"cat_clean__dropoff_cluster_18\",\n",
+        "            \"cat_clean__dropoff_cluster_19\",\n",
+        "            \"cat_clean__pickup_cluster_8\",\n",
+        "            \"cat_clean__pickup_cluster_6\",\n",
+        "            \"cat_clean__dropoff_cluster_8\",\n",
+        "            \"cat_clean__pickup_cluster_9\",\n",
+        "            \"cat_clean__pickup_cluster_4\",\n",
+        "            \"cat_clean__pickup_cluster_2\",\n",
+        "            \"cat_clean__pickup_cluster_3\",\n",
+        "            \"cat_clean__pickup_cluster_12\",\n",
+        "            \"cat_clean__pickup_cluster_13\",\n",
+        "            \"cat_clean__pickup_cluster_14\",\n",
+        "            \"cat_clean__pickup_cluster_15\",\n",
+        "            \"cat_clean__dropoff_cluster_3\",\n",
+        "            \"cat_clean__dropoff_cluster_2\",\n",
+        "            \"cat_clean__pickup_cluster_19\",\n",
+        "            \"cat_clean__pickup_cluster_10\",\n",
+        "            \"cat_clean__dropoff_cluster_10\",\n",
+        "            \"cat_clean__dropoff_cluster_7\",\n",
+        "            \"cat_clean__dropoff_cluster_6\",\n",
+        "            \"cat_clean__dropoff_cluster_17\"\n",
+        "        ]\n",
+        "\n",
+        "    def fit(self, X, y=None):\n",
+        "        self.columns_in_ = X.columns\n",
+        "        return self\n",
+        "\n",
+        "    def transform(self, X):\n",
+        "        X = X.copy()\n",
+        "        drop_cols = [col for col in self.features_to_drop if col in X.columns]\n",
+        "        return X.drop(columns=drop_cols)\n",
+        "\n",
+        "    def set_output(self, *, transform=None):\n",
+        "        return self\n"
+      ],
+      "metadata": {
+        "id": "Y3wOVjihoECG"
+      },
+      "execution_count": 10,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
         "distance_features = ['distance_km', 'manhattan_km']\n",
         "\n",
         "cyclic_features = ['hour', 'bearing']\n",
@@ -742,6 +796,7 @@
         "    ('datetime_features', DatetimeFeatureExtractor(datetime_column='pickup_datetime')),\n",
         "    ('coordinate_features', CoordinateFeatureExtractor(n_clusters=20)),\n",
         "    ('preprocessing', preprocessor),\n",
+        "    ('drop_low_shap', DropLowSHAPFeatures()),\n",
         "    ('model', stacked_model)\n",
         "])\n",
         "full_pipeline.set_output(transform='pandas')\n",
@@ -750,7 +805,7 @@
       "metadata": {
         "id": "EpjiwM-iKGnH"
       },
-      "execution_count": 14,
+      "execution_count": 11,
       "outputs": []
     },
     {
@@ -760,7 +815,7 @@
         "    X_train, y_train, test_size=0.2, random_state=42\n",
         ")\n",
         "\n",
-        "full_pipeline.fit(X_train, y_train)\n",
+        "full_pipeline.fit(X_subtrain, y_subtrain)\n",
         "\n",
         "y_val_pred = full_pipeline.predict(X_val)\n",
         "\n",
@@ -768,44 +823,28 @@
         "val_mae = mean_absolute_error(y_val, y_val_pred)\n",
         "val_r2 = r2_score(y_val, y_val_pred)\n",
         "\n",
-        "print(\"Validation Set Metrics (from full-trained model):\")\n",
+        "print(\"Validation Set Metrics (from subtrain-trained model):\")\n",
         "print(f\"RMSE: {val_rmse:.4f}\")\n",
         "print(f\"MAE:  {val_mae:.4f}\")\n",
-        "print(f\"R²:   {val_r2:.4f}\")\n",
-        "\n",
-        "y_pred = full_pipeline.predict(X_holdout)\n",
-        "\n",
-        "rmse = np.sqrt(mean_squared_error(y_holdout, y_pred))\n",
-        "mae = mean_absolute_error(y_holdout, y_pred)\n",
-        "r2 = r2_score(y_holdout, y_pred)\n",
-        "\n",
-        "print(\"\\nHold-Out Evaluation Metrics:\")\n",
-        "print(f\"RMSE: {rmse:.4f}\")\n",
-        "print(f\"MAE:  {mae:.4f}\")\n",
-        "print(f\"R²:   {r2:.4f}\")"
+        "print(f\"R²:   {val_r2:.4f}\")"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "PsrE13AfKLZl",
-        "outputId": "ec10585c-f43a-4c49-e0b1-7c3fa4d223a9"
+        "outputId": "64a0d05c-80c4-4343-c7ad-e588451516b0"
       },
-      "execution_count": 13,
+      "execution_count": 12,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Validation Set Metrics (20% of training data):\n",
-            "RMSE: 0.2507\n",
-            "MAE:  0.1638\n",
-            "R²:   0.7893\n",
-            "\n",
-            "Hold-Out Evaluation Metrics:\n",
-            "RMSE: 0.2509\n",
-            "MAE:  0.1631\n",
-            "R²:   0.7890\n"
+            "Validation Set Metrics (from subtrain-trained model):\n",
+            "RMSE: 0.2515\n",
+            "MAE:  0.1644\n",
+            "R²:   0.7880\n"
           ]
         }
       ]
