--- a/notebooks/stack_uber_fare.ipynb
+++ b/notebooks/stack_uber_fare.ipynb
@@ -25,7 +25,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": 13,
       "metadata": {
         "id": "IsSR1IeOHMww"
       },
@@ -71,9 +71,9 @@
           "height": 400
         },
         "id": "1N4jUZ-jHgc0",
-        "outputId": "0f93dc56-8af5-4b8d-9e51-99d9dcc924d4"
+        "outputId": "82fd6892-f87e-4a3b-ad35-b39a9b3d26ce"
       },
-      "execution_count": 2,
+      "execution_count": 14,
       "outputs": [
         {
           "output_type": "stream",
@@ -82,7 +82,7 @@
             "Downloading...\n",
             "From: https://drive.google.com/uc?id=1nvFRd8uiUV8OfoihMOXZ0Emle1ksxwW1\n",
             "To: /content/uber.csv\n",
-            "100%|██████████| 23.5M/23.5M [00:00<00:00, 76.0MB/s]\n"
+            "100%|██████████| 23.5M/23.5M [00:00<00:00, 147MB/s]\n"
           ]
         },
         {
@@ -112,7 +112,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-99e8c43b-b81b-4675-9db2-14c21b984bb9\" class=\"colab-df-container\">\n",
+              "  <div id=\"df-ec5699c1-68f2-4a5b-89fa-b2522ae159bf\" class=\"colab-df-container\">\n",
               "    <div>\n",
               "<style scoped>\n",
               "    .dataframe tbody tr th:only-of-type {\n",
@@ -209,7 +209,7 @@
               "    <div class=\"colab-df-buttons\">\n",
               "\n",
               "  <div class=\"colab-df-container\">\n",
-              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-99e8c43b-b81b-4675-9db2-14c21b984bb9')\"\n",
+              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-ec5699c1-68f2-4a5b-89fa-b2522ae159bf')\"\n",
               "            title=\"Convert this dataframe to an interactive table.\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -261,12 +261,12 @@
               "\n",
               "    <script>\n",
               "      const buttonEl =\n",
-              "        document.querySelector('#df-99e8c43b-b81b-4675-9db2-14c21b984bb9 button.colab-df-convert');\n",
+              "        document.querySelector('#df-ec5699c1-68f2-4a5b-89fa-b2522ae159bf button.colab-df-convert');\n",
               "      buttonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "      async function convertToInteractive(key) {\n",
-              "        const element = document.querySelector('#df-99e8c43b-b81b-4675-9db2-14c21b984bb9');\n",
+              "        const element = document.querySelector('#df-ec5699c1-68f2-4a5b-89fa-b2522ae159bf');\n",
               "        const dataTable =\n",
               "          await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                    [key], {});\n",
@@ -286,8 +286,8 @@
               "  </div>\n",
               "\n",
               "\n",
-              "    <div id=\"df-52126617-fb60-47a9-8f7d-b3449dbcc120\">\n",
-              "      <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-52126617-fb60-47a9-8f7d-b3449dbcc120')\"\n",
+              "    <div id=\"df-3f249f3b-eb81-4873-9138-85d3ddcfd60c\">\n",
+              "      <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-3f249f3b-eb81-4873-9138-85d3ddcfd60c')\"\n",
               "                title=\"Suggest charts\"\n",
               "                style=\"display:none;\">\n",
               "\n",
@@ -406,7 +406,7 @@
               "        }\n",
               "        (() => {\n",
               "          let quickchartButtonEl =\n",
-              "            document.querySelector('#df-52126617-fb60-47a9-8f7d-b3449dbcc120 button');\n",
+              "            document.querySelector('#df-3f249f3b-eb81-4873-9138-85d3ddcfd60c button');\n",
               "          quickchartButtonEl.style.display =\n",
               "            google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "        })();\n",
@@ -422,7 +422,7 @@
             }
           },
           "metadata": {},
-          "execution_count": 2
+          "execution_count": 14
         }
       ]
     },
@@ -452,7 +452,7 @@
       "metadata": {
         "id": "jDaf15hFHiVV"
       },
-      "execution_count": 3,
+      "execution_count": 15,
       "outputs": []
     },
     {
@@ -571,7 +571,57 @@
       "metadata": {
         "id": "Y6L8GKHNJy1n"
       },
-      "execution_count": 4,
+      "execution_count": 16,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# Feature engineering"
+      ],
+      "metadata": {
+        "id": "BzFiibHiND6y"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "class PostClusteringFeatureEngineer(BaseEstimator, TransformerMixin):\n",
+        "    def __init__(self):\n",
+        "        self._output_config = {\"transform\": \"default\"}\n",
+        "\n",
+        "    def fit(self, X, y=None):\n",
+        "        self.feature_names_in_ = X.columns.tolist()\n",
+        "        return self\n",
+        "\n",
+        "    def transform(self, X):\n",
+        "        check_is_fitted(self)\n",
+        "        X = X.copy()\n",
+        "\n",
+        "        required = ['pickup_cluster', 'dropoff_cluster', 'distance_km', 'manhattan_km']\n",
+        "        for col in required:\n",
+        "            if col not in X.columns:\n",
+        "                raise ValueError(f\"Missing required column: {col}\")\n",
+        "\n",
+        "        X['is_same_cluster'] = (X['pickup_cluster'] == X['dropoff_cluster']).astype(int)\n",
+        "\n",
+        "        X['cluster_pair'] = (\n",
+        "            X['pickup_cluster'].astype(str) + \"_\" +\n",
+        "            X['dropoff_cluster'].astype(str)\n",
+        "        )\n",
+        "\n",
+        "        X['distance_ratio'] = X['distance_km'] / X['manhattan_km'].replace(0, 1e-5)\n",
+        "\n",
+        "        return X\n",
+        "\n",
+        "    def set_output(self, *, transform=None):\n",
+        "        self._output_config[\"transform\"] = transform\n",
+        "        return self"
+      ],
+      "metadata": {
+        "id": "23SS_dljNDou"
+      },
+      "execution_count": 17,
       "outputs": []
     },
     {
@@ -649,7 +699,7 @@
       "metadata": {
         "id": "IkVS0VkYJ-WD"
       },
-      "execution_count": 5,
+      "execution_count": 18,
       "outputs": []
     },
     {
@@ -664,7 +714,7 @@
       "metadata": {
         "id": "4pwGHlr-KAGS"
       },
-      "execution_count": 6,
+      "execution_count": 19,
       "outputs": []
     },
     {
@@ -678,7 +728,7 @@
       "metadata": {
         "id": "6fEe9lGZKBxP"
       },
-      "execution_count": 7,
+      "execution_count": 20,
       "outputs": []
     },
     {
@@ -691,7 +741,7 @@
       "metadata": {
         "id": "dkHafC2qKDlS"
       },
-      "execution_count": 8,
+      "execution_count": 21,
       "outputs": []
     },
     {
@@ -704,7 +754,7 @@
       "metadata": {
         "id": "41SM-S7uKFBW"
       },
-      "execution_count": 9,
+      "execution_count": 22,
       "outputs": []
     },
     {
@@ -758,20 +808,22 @@
       "metadata": {
         "id": "Y3wOVjihoECG"
       },
-      "execution_count": 10,
+      "execution_count": 23,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
-        "distance_features = ['distance_km', 'manhattan_km']\n",
+        "int_features = ['passenger_count', 'is_same_cluster']\n",
+        "\n",
+        "distance_features = ['distance_km', 'manhattan_km', 'distance_ratio']\n",
         "\n",
         "cyclic_features = ['hour', 'bearing']\n",
         "\n",
-        "categorical_features = ['pickup_cluster', 'dropoff_cluster']\n",
+        "categorical_features = ['pickup_cluster', 'dropoff_cluster', 'cluster_pair']\n",
         "\n",
         "preprocessor = ColumnTransformer([\n",
-        "    ('passenger_clean', passenger_pipeline, ['passenger_count']),\n",
+        "    ('passenger_clean', passenger_pipeline, int_features),\n",
         "    ('distance_clean', distance_pipeline, distance_features),\n",
         "    ('cyclic_clean', cyclic_pipeline, cyclic_features),\n",
         "    ('cat_clean', categorical_pipeline, categorical_features),\n",
@@ -795,6 +847,7 @@
         "full_pipeline = Pipeline([\n",
         "    ('datetime_features', DatetimeFeatureExtractor(datetime_column='pickup_datetime')),\n",
         "    ('coordinate_features', CoordinateFeatureExtractor(n_clusters=20)),\n",
+        "    ('post_cluster_features', PostClusteringFeatureEngineer()),\n",
         "    ('preprocessing', preprocessor),\n",
         "    ('drop_low_shap', DropLowSHAPFeatures()),\n",
         "    ('model', stacked_model)\n",
@@ -805,7 +858,7 @@
       "metadata": {
         "id": "EpjiwM-iKGnH"
       },
-      "execution_count": 11,
+      "execution_count": 26,
       "outputs": []
     },
     {
@@ -833,18 +886,18 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "PsrE13AfKLZl",
-        "outputId": "64a0d05c-80c4-4343-c7ad-e588451516b0"
+        "outputId": "34749ebe-a1b4-4c34-ceaf-281bb12d709a"
       },
-      "execution_count": 12,
+      "execution_count": 27,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
             "Validation Set Metrics (from subtrain-trained model):\n",
-            "RMSE: 0.2515\n",
-            "MAE:  0.1644\n",
-            "R²:   0.7880\n"
+            "RMSE: 0.2500\n",
+            "MAE:  0.1633\n",
+            "R²:   0.7906\n"
           ]
         }
       ]
