--- a/notebooks/baseline_uber_fair.ipynb
+++ b/notebooks/baseline_uber_fair.ipynb
@@ -709,7 +709,16 @@
         "            weekday_transformed = self.weekday_transformer.transform(X[['weekday']])\n",
         "            result[['weekday_sin', 'weekday_cos']] = pd.DataFrame(weekday_transformed, index=X.index)\n",
         "\n",
-        "        return result\n",
+        "        if 'hour' in X.columns:\n",
+        "            X.drop(columns=['hour'], inplace=True)\n",
+        "        if 'bearing' in X.columns:\n",
+        "            X.drop(columns=['bearing'], inplace=True)\n",
+        "        if 'weekday' in X.columns:\n",
+        "            X.drop(columns=['weekday'], inplace=True)\n",
+        "\n",
+        "        X = pd.concat([X, result], axis=1)\n",
+        "\n",
+        "        return X\n",
         "\n",
         "    def set_output(self, *, transform=None):\n",
         "        return self\n",
@@ -738,7 +747,7 @@
       "metadata": {
         "id": "6qNGqxC3gjFw"
       },
-      "execution_count": 5,
+      "execution_count": 14,
       "outputs": []
     },
     {
@@ -836,6 +845,28 @@
     {
       "cell_type": "markdown",
       "source": [
+        "# One hot"
+      ],
+      "metadata": {
+        "id": "Q1BqQNfS8gTB"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "onehot_pipeline = Pipeline([\n",
+        "    ('cat_clean', OneHotEncoder(handle_unknown='ignore', sparse_output=False))\n",
+        "])"
+      ],
+      "metadata": {
+        "id": "nMoVA6Xn8hLO"
+      },
+      "execution_count": 17,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
         "# Categorical feature"
       ],
       "metadata": {
@@ -875,7 +906,9 @@
         "\n",
         "cyclic_features = ['hour', 'bearing', 'weekday']\n",
         "\n",
-        "categorical_features = ['month', 'pickup_cluster', 'dropoff_cluster', 'pickup_grid', 'dropoff_grid']\n",
+        "categorical_features = ['month', 'pickup_grid', 'dropoff_grid']\n",
+        "\n",
+        "one_hot = ['pickup_cluster', 'dropoff_cluster']\n",
         "\n",
         "preprocessor = ColumnTransformer([\n",
         "    ('passenger_clean', passenger_pipeline, passenger_features),\n",
@@ -883,6 +916,7 @@
         "    ('cat_clean', categorical_pipeline, categorical_features),\n",
         "    ('bin_clean', binary_pipeline, binary_features),\n",
         "    ('dis_clean', distance_pipeline, distance_features),\n",
+        "    ('oh', onehot_pipeline, one_hot),\n",
         "])\n",
         "\n",
         "full_pipeline = Pipeline([\n",
@@ -897,7 +931,7 @@
       "metadata": {
         "id": "dU5QPAI2iUdV"
       },
-      "execution_count": 11,
+      "execution_count": 18,
       "outputs": []
     },
     {
@@ -948,23 +982,23 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "ockXmQ-J-vPg",
-        "outputId": "a7dc5eba-8738-4e60-e204-effdcb5e8e55"
+        "outputId": "8f60dc0c-bd91-4554-800a-77308c7b58d6"
       },
-      "execution_count": 12,
+      "execution_count": 19,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
             "Cross-Validation Metrics (5-Fold):\n",
-            "RMSE: 0.3616 ± 0.0022\n",
-            "MAE:  0.2690 ± 0.0008\n",
-            "R²:   0.5657 ± 0.0043\n",
+            "RMSE: 0.3515 ± 0.0032\n",
+            "MAE:  0.2579 ± 0.0015\n",
+            "R²:   0.5895 ± 0.0068\n",
             "\n",
             "Hold-Out Evaluation Metrics:\n",
-            "RMSE: 0.3587\n",
-            "MAE:  0.2677\n",
-            "R²:   0.5686\n"
+            "RMSE: 0.3490\n",
+            "MAE:  0.2566\n",
+            "R²:   0.5917\n"
           ]
         }
       ]
@@ -1008,15 +1042,15 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "7b327f3d-3396-4fde-adfb-52f41657f3e6"
+        "outputId": "37103812-fef9-4bfb-a7fd-5d93f3945314"
       },
-      "execution_count": 13,
+      "execution_count": 20,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stderr",
           "text": [
-            "PermutationExplainer explainer: 39998it [20:46, 31.92it/s]                           \n"
+            "PermutationExplainer explainer: 39998it [20:34, 32.14it/s]\n"
           ]
         },
         {
@@ -1025,22 +1059,60 @@
           "text": [
             "SHAP Feature Importances (from hold-out set):\n",
             "                             Feature  Mean |SHAP Value|\n",
-            "0            dis_clean__manhattan_km           0.460682\n",
-            "1             dis_clean__distance_km           0.249669\n",
-            "2            cat_clean__dropoff_grid           0.059475\n",
-            "3             cat_clean__pickup_grid           0.050778\n",
-            "4          cyclic_clean__bearing_cos           0.011524\n",
-            "5          cyclic_clean__weekday_cos           0.010923\n",
-            "6         cat_clean__dropoff_cluster           0.010403\n",
-            "7                   cat_clean__month           0.009731\n",
-            "8             cyclic_clean__hour_sin           0.006762\n",
-            "9             cyclic_clean__hour_cos           0.006623\n",
-            "10         cyclic_clean__weekday_sin           0.006124\n",
-            "11  passenger_clean__passenger_count           0.003810\n",
-            "12           bin_clean__is_rush_hour           0.002809\n",
-            "13             bin_clean__is_weekend           0.002660\n",
-            "14         cat_clean__pickup_cluster           0.001665\n",
-            "15         cyclic_clean__bearing_sin           0.001462\n"
+            "0               oh__pickup_cluster_0           0.565542\n",
+            "1              oh__pickup_cluster_16           0.555392\n",
+            "2            dis_clean__manhattan_km           0.522366\n",
+            "3              oh__pickup_cluster_18           0.348076\n",
+            "4             dis_clean__distance_km           0.289337\n",
+            "5              oh__dropoff_cluster_0           0.187786\n",
+            "6              oh__dropoff_cluster_9           0.177512\n",
+            "7             oh__dropoff_cluster_14           0.072163\n",
+            "8             cat_clean__pickup_grid           0.057782\n",
+            "9            cat_clean__dropoff_grid           0.048426\n",
+            "10            oh__dropoff_cluster_16           0.047810\n",
+            "11              oh__pickup_cluster_1           0.043291\n",
+            "12            oh__dropoff_cluster_15           0.036016\n",
+            "13             oh__pickup_cluster_11           0.035362\n",
+            "14             oh__dropoff_cluster_1           0.021712\n",
+            "15            cyclic_clean__hour_cos           0.014628\n",
+            "16         cyclic_clean__weekday_cos           0.011154\n",
+            "17                  cat_clean__month           0.009453\n",
+            "18            cyclic_clean__hour_sin           0.009398\n",
+            "19            oh__dropoff_cluster_12           0.007365\n",
+            "20         cyclic_clean__weekday_sin           0.006409\n",
+            "21         cyclic_clean__bearing_sin           0.005790\n",
+            "22  passenger_clean__passenger_count           0.003953\n",
+            "23         cyclic_clean__bearing_cos           0.002590\n",
+            "24             bin_clean__is_weekend           0.001815\n",
+            "25           bin_clean__is_rush_hour           0.000530\n",
+            "26              oh__pickup_cluster_5           0.000507\n",
+            "27             oh__dropoff_cluster_4           0.000507\n",
+            "28             oh__pickup_cluster_17           0.000371\n",
+            "29            oh__dropoff_cluster_13           0.000165\n",
+            "30             oh__dropoff_cluster_5           0.000156\n",
+            "31            oh__dropoff_cluster_11           0.000123\n",
+            "32              oh__pickup_cluster_7           0.000070\n",
+            "33            oh__dropoff_cluster_19           0.000031\n",
+            "34            oh__dropoff_cluster_18           0.000030\n",
+            "35              oh__pickup_cluster_8           0.000021\n",
+            "36              oh__pickup_cluster_6           0.000020\n",
+            "37             oh__dropoff_cluster_8           0.000015\n",
+            "38              oh__pickup_cluster_9           0.000012\n",
+            "39              oh__pickup_cluster_4           0.000000\n",
+            "40              oh__pickup_cluster_2           0.000000\n",
+            "41              oh__pickup_cluster_3           0.000000\n",
+            "42             oh__pickup_cluster_12           0.000000\n",
+            "43             oh__pickup_cluster_13           0.000000\n",
+            "44             oh__pickup_cluster_14           0.000000\n",
+            "45             oh__pickup_cluster_15           0.000000\n",
+            "46             oh__dropoff_cluster_3           0.000000\n",
+            "47             oh__dropoff_cluster_2           0.000000\n",
+            "48             oh__pickup_cluster_19           0.000000\n",
+            "49             oh__pickup_cluster_10           0.000000\n",
+            "50            oh__dropoff_cluster_10           0.000000\n",
+            "51             oh__dropoff_cluster_7           0.000000\n",
+            "52             oh__dropoff_cluster_6           0.000000\n",
+            "53            oh__dropoff_cluster_17           0.000000\n"
           ]
         }
       ]
